fix tag spacing

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -1172,7 +1172,8 @@ h1.unavailable {
     }
 .search-tags
     {
-        padding-top: 4px;
+        padding-top: 2px;
+        line-height: 24px;
     }
 /* Search Contributors */
 
